[package]
name = "lan-clipboard"
version = "0.1.0"
edition = "2021"

[features]
# No default features to keep CI simple. Enable tray/clipboard/net explicitly when building for Windows GUI.
default = []
tray = ["dep:tray-item"]
clipboard = ["dep:clipboard"]
net = ["dep:tokio"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
chacha20poly1305 = { version = "0.10", features = ["xchacha20"] }
argon2 = "0.4"
rand = "0.8"
sha2 = "0.10"
log = "0.4"
thiserror = "1.0"
zeroize = "1.5"

# Optional / platform-specific
tokio = { version = "1", features = ["full"], optional = true }
clipboard = { version = "0.7", optional = true }
tray-item = { version = "0.6", optional = true }

[dev-dependencies]
assert_matches = "1.5"
