[package]
name = "lan-clipboard"
version = "0.1.0"
edition = "2021"
description = "局域网粘贴板，简单链接"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
chacha20poly1305 = { version = "0.10", features = ["xchacha20"] }
argon2 = "0.4"
rand = "0.8"
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
zeroize = "1.5"
tokio = { version = "1", features = ["full"] }
tray-item = { version = "0.7", optional = true }

[features]
default = []
tray = ["dep:tray-item"]
